allow trigger workflow from github on this fork

--- a/.github/workflows/test-auth.yml
+++ b/.github/workflows/test-auth.yml
@@ -1,6 +1,6 @@
 name: Single Instance With Auth
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   single-instance-with-auth:
