--- a/.github/workflows/test-replica-set.yml
+++ b/.github/workflows/test-replica-set.yml
@@ -1,6 +1,6 @@
 name: Replica Set Tests
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   single-node-replica-set-on-default-port:
