--- a/.github/workflows/test-single-instance.yml
+++ b/.github/workflows/test-single-instance.yml
@@ -1,6 +1,6 @@
 name: Single Instance Tests
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   single-instance-on-default-port:
